# AI-platform

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codex-notex.md  conftest.py  docker-compose.yml  pyproject.toml
apps/frontend/: .env.example  .eslintrc.json  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/app/components/: ErrorBoundary.tsx
apps/frontend/app/documents/: page.tsx
apps/frontend/tests/: README.md  layout.test.tsx  page.test.tsx
docs/: README.md  demo-walkthrough.md  project-summary.md
docs/api/: README.md  shared-contracts.md
docs/architecture/: README.md  diagrams.md
docs/articles/: part-1-architecture-and-local-first-design.md  part-2-rag-ingestion-and-production-hardening.md
docs/runbooks/: README.md
infra/docker/: README.md
infra/helm/: README.md
infra/kubeflow-integration/: README.md  istio-auth.yaml  istio-virtualservice.yaml  keycloak-client.tf  kustomization.yaml
infra/kubernetes/: README.md
infra/kubernetes/base/: configmap.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secrets.yaml
infra/kubernetes/base/api-gateway/: deployment.yaml  service.yaml
infra/kubernetes/base/chat-service/: deployment.yaml  service.yaml
infra/kubernetes/base/eval-service/: deployment.yaml  service.yaml
infra/kubernetes/base/frontend/: deployment.yaml  service.yaml
scripts/: export_openapi.py
services/api-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/api-gateway/api_gateway/: clients.py  main.py  routes.py
services/api-gateway/tests/: test_chat_proxy.py  test_health.py
services/chat-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/chat-service/chat_service/: clients.py  main.py  orchestration.py  routes.py
services/chat-service/tests/: test_health.py  test_orchestration.py  test_rag_client.py  test_routes.py  test_streaming.py
services/eval-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/eval-service/eval_service/: main.py  routes.py
services/eval-service/tests/: test_health.py
services/eval-service/workers/: README.md
services/ingestion-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/ingestion-service/ingestion_service/: chunking.py  clients.py  jobs.py  main.py  migrations.py  object_store.py  ocr_client.py  queue.py  routes.py  storage.py  worker.py  workflow.py
services/ingestion-service/migrations/: 001_create_ingestion_tables.sql  002_add_ingestion_job_payload.sql
services/ingestion-service/tests/: conftest.py  test_clients.py  test_health.py  test_jobs.py  test_migrations.py  test_queue.py  test_routes.py  test_storage.py  test_upload.py  test_worker.py  test_workflow.py
services/ingestion-service/workers/: README.md
services/model-router/: .env.example  Dockerfile  README.md  pyproject.toml
services/model-router/model_router/: embeddings.py  main.py  routes.py
services/model-router/tests/: test_embeddings.py  test_health.py
services/ocr-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/ocr-service/ocr_service/: extraction.py  main.py  routes.py  storage.py
services/ocr-service/tests/: test_extraction.py  test_health.py  test_ocr_route.py
services/ocr-service/workers/: README.md
services/rag-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/rag-service/rag_service/: main.py  routes.py  vector_store.py
services/rag-service/tests/: conftest.py  test_health.py  test_retrieve.py  test_vector_store.py
shared/python-common/: README.md  pyproject.toml
shared/python-common/src/python_common/: __init__.py  errors.py
shared/python-common/src/python_common/auth/: __init__.py
shared/python-common/src/python_common/config/: __init__.py  settings.py
shared/python-common/src/python_common/db/: __init__.py
shared/python-common/src/python_common/logging_utils/: __init__.py
shared/python-common/src/python_common/observability/: __init__.py  metrics.py  tracing.py
shared/python-common/src/python_common/schemas/: __init__.py  auth.py  chat.py  common.py  documents.py  errors.py  evaluation.py  models.py  retrieval.py
shared/python-common/src/python_common/web/: __init__.py  app_factory.py  context.py  jwt_auth.py  rate_limit.py  service_client.py
shared/python-common/tests/: test_app_factory.py  test_request_context.py  test_service_client.py  test_settings.py
tests/integration/: conftest.py  test_ollama_embeddings.py  test_postgres_jobs.py  test_qdrant_store.py  test_redis_queue.py
(+11 files in other folders)
