[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "pymilvus>=2.4.9",
  "qdrant-client>=1.12.1",
  "uvicorn[standard]==0.32.1",
  "python-common"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
python-common = { workspace = true }
